REGRESSION (r288069): Bits of selection left after deselecting on bugzilla page https://bugs.webkit.org/show_bug.cgi?id=235466 <rdar://87902230>

Reviewed by Darin Adler.

Source/WebCore:

Undo the incorrect dynamicDowncast change.

This code reads (perhaps confusingly at first sight):
  return is<RenderView>(containingBlock) ? nullptr : containingBlock;

while the dynamicDowncast is meant to shorten code like this:
  return is<RenderView>(containingBlock) ? containingBlock : nullptr;

Test: fast/text/incorrect-deselection-across-multiple-elements.html

* rendering/SelectionRangeData.cpp:
(WebCore::containingBlockBelowView):

LayoutTests:

* fast/text/incorrect-deselection-across-multiple-elements-expected.txt: Added.
* fast/text/incorrect-deselection-across-multiple-elements.html: Added. Use indexOf because
while the repaint rect area is always the same, the rects order may vary.



Canonical link: https://commits.webkit.org/246300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288409 268f45cc-cd09-0410-ab3c-d52691b4dbfc